# spatial3d

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
spatial/: __init__.py  aabb.py  dual.py  edge.py  euler.py  exceptions.py  facet.py  intersection.py  kdtree.py  matrix4.py  mesh.py  parameters.py  quaternion.py  ray.py  swizzler.py  transform.py  vector3.py
spatial/euler/: __init__.py  axes.py  order.py
spatial3d/: aabb.py  coordinate_axes.py  dual.py  edge.py  exceptions.py  intersection.py  kdtree.py  quaternion.py  ray.py  swizzler.py  transform.py  vector3.py
spatial3d/euler/: __init__.py  axes.py
test/: __init__.py  test_aabb.py  test_dual.py  test_edge.py  test_euler.py  test_facet.py  test_intersection.py  test_kdtree.py  test_matrix4.py  test_mesh.py  test_quaternion.py  test_ray.py  test_swizzler.py  test_transform.py  test_vector3.py
