[tool.poetry]
name = "spatial"
version = "0.3.0"
description = "A Python library for representing and working with 3D objects."
authors = ["James Schwartz"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pydocstyle]
match='(?!test_).*\.py'
# Turn off module (D100) and __init__ (D107) docstrings.
# Ignore blank line before class docstring (D203) and docstrings start on the first line (D213).
ignore = "D100, D107, D213, D203"

[tool.pylint.'MESSAGES CONTROL']
# Turn off checking of invalid names (C0103), module docstrings (C0114), and TODO comments (W0511).
disable = "C0103, C0114, W0511"

[tool.coverage]
run.omit = ["*/test_*.py"]
report.precision = 2
report.exclude_lines = [
    "@overload",
]
